Video CRUD, Validation, GridView, ListView, FrontEnd Data show, Like Option doen

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,6 @@ protected/runtime/*
 !protected/runtime/.gitignore
 protected/data/*.db
 themes/classic/views/
+frontend/web/storage
+backend/web/storage
 /vendor
